Finally fixed the image not aligning properly!

--- a/index.css
+++ b/index.css
@@ -18,11 +18,22 @@ body {
     color: #E5E7EB;
 }
 
-.hero-main {
+.first-section {
+    background-color: #1F2937;
     display: flex;
+    flex-flow: row;
     align-items: center;
-    padding-bottom: 70px;
-    gap: 60px;
+    justify-content: center;
+    padding-bottom: 100px;
+    /* padding: 100px 16px; */
+    gap: 85px;
+}
+
+.left-section {
+    max-width: 450px;
+    display: flex;
+    flex-flow: column;
+    gap: 8px;
 }
 
 h1 {
@@ -34,13 +45,7 @@ h1 {
     float: left;
 }
 
-.top-text {
-    display: flex;
-    flex-wrap: wrap;
-    text-align: left;
-}
-
-.bottom-text {
+.text {
     display: flex;
     flex-wrap: wrap;
     text-align: left;
